--- a/cpanel.yml
+++ b/cpanel.yml
@@ -1,4 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home4/vendelin/public_html/demouniversidad/
+    - export DEPLOYPATH=/home4/vendelin/public_html/
+    - /bin/cp -R demouniversidad $DEPLOYPATH
