--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home4/vendelin/public_html/
-    - /bin/cp -R /home4/vendelin/public_html/demouniversidad $DEPLOYPATH
+    - export DEPLOYPATH=/home4/vendelin/public_html/demouniversidad/
+    - /bin/cp -R * $DEPLOYPATH
